# Intern-in-CTBC

./: README.md  return.csv
202202_Intern/: PttData-Gossiping-20220505111857.txt  ptt_scripy.py
Coding_Folder/: g_CalculateFactorReturn_ValueIndex.ipynb  h_BackTest.ipynb  i2.0_Model_1(2010~2022)(1).ipynb  i2.0_Model_1(2010~2022).ipynb  i2.5_Model_1(2013~2022)(1).ipynb  i_Model_1.ipynb  ij1_Model_2.ipynb  ij2_Model_2.ipynb  ij4_Model_2.ipynb  l_ExportSegmentedNews.ipynb  n_combineIRICAndBBmarket.ipynb  test3.ipynb
Event_Driven_Stock_Prediction_using_Deep_Learning/: -1_stockPricesReturns_jsonfile.ipynb  0EB_ExportSegmentedNews.ipynb  1_transformed_news.ipynb  WB_Score.csv  a_embeddingWord.py  b_test_wordEmbeddingsVocab.ipynb  c1_genFeatureMatrix_ForCNN 拷貝.py  c1_genFeatureMatrix_ForCNN.py  d_model_sb_gru.py  e1_model_cnn.ipynb  e_model_cnn.py  f_rollingmodel_cnn.ipynb  test n_news _ Positive Ratio.ipynb  test2ForMonth.py
Event_Driven_Stock_Prediction_using_Deep_Learning/pyltp/: CMakeLists.txt  README.md  setup.py
Event_Driven_Stock_Prediction_using_Deep_Learning/pyltp/src/: pyltp.cpp
FactorValues/: Value.csv
OpenIEStanza_EventEmbedding/: Untitled.ipynb  Untitled1.ipynb  baidu_svo_extract.py  c0.5_NeuralTensorNetworkForEB.ipynb  test.ipynb
bbmarket/: BBPredict_v1.csv  b_sentimentNheat.ipynb  很多方法以季預測牛熊.numbers
bbmarket/index_data/: EB_Premium.csv  (+5 more)
doc2vec/: doc2vec201311.model  doc2vec201312.model  doc2vec201322.model  doc2vec201341.model
計算溢酬/: Untitled.ipynb  backTest.py  calculateFactorsReturn.py  displayFactorTrend.py  getPool.py  priceFileProcess.py
(+6042 files in other folders)
